# axshell

./: Cargo.toml  README.en.md  README.md  README.zh.md  worker.md
.cargo/: config.toml
.github/workflows/: release.yml
assets/icons/: terminal_icon.icns
assets/icons/terminal_icon_all_formats/: terminal_icon.icns
docs/: README.md  README.zh.md  development.en.md  development.md  development.zh.md  getting-started.md  getting-started.zh.md  resource-lifecycle.en.md  resource-lifecycle.md  resource-lifecycle.zh.md  user-guide.en.md  user-guide.md  user-guide.zh.md
docs/features/: local-data-troubleshooting.md  local-data-troubleshooting.zh.md  monitoring-lifecycle.md  monitoring-lifecycle.zh.md  proxy-x11.md  proxy-x11.zh.md  sftp.md  sftp.zh.md
docs/project-env-audit/: changes.md  current.md
docs/project-implementation-tracker/: changes.md  current.md  project-map.md  research.md
docs/project-implementation-tracker/changes/2026/: 07.md
examples/: dev_reload.rs
locales/: en.yml  zh-CN.yml
src/: app.rs  backend.rs  config.rs  diagnostics.rs  dialogs.rs  events.rs  main.rs  monitoring.rs  platform.rs  session.rs  sftp.rs  sftp_ops.rs  ssh_terminal.rs  sync.rs  system.rs  terminal.rs  terminal_element.rs  terminal_input.rs  theme.rs  ui.rs
src/app/: actions.rs  app_menu.rs  config_sync.rs  constants.rs  dialogs.rs  init.rs  input.rs  lifecycle.rs  mod.rs  pane.rs  resizable.rs  search.rs  session_ui.rs  sftp.rs  startup.rs  state.rs  terminal.rs  theme.rs  types.rs  ui.rs  views.rs  workspace.rs
src/app/actions/: pane.rs  saved_sessions.rs  session.rs  sftp.rs  terminal.rs
src/app/core/: types.rs
src/app/dialogs/: delete_confirm.rs  host_key_confirm.rs  selector.rs  settings.rs  sftp_close_confirm.rs  sftp_overwrite_confirm.rs  ssh.rs  transfers.rs
src/app/dialogs/settings/: about.rs  appearance.rs  custom.rs  font_page.rs  fonts.rs  general.rs  help.rs  keybindings.rs  mod.rs  monitoring.rs  proxy.rs  shell.rs  sync.rs  terminal.rs  workspace.rs
src/app/input/: app_menu.rs  keybinding_recorder.rs
src/app/lifecycle/: event_loop.rs  init.rs  startup.rs
src/app/state/: appearance.rs  monitoring.rs  runtime.rs  search.rs
src/app/syncing/: config_sync.rs
src/app/terminal/: search.rs
src/app/ui/: helpers.rs  layout.rs  mod.rs  monitoring.rs  sftp_panel.rs  sidebar.rs  tab_bar.rs  terminal_panel.rs
src/app/views/: layout.rs  monitoring.rs  sftp_panel.rs  sidebar.rs  tab_bar.rs  terminal_panel.rs
src/app/views/sftp_panel/: sort.rs  transfer_panel.rs
src/app/workspace/: workspace.rs
src/backend/: auth.rs  host_key.rs  local.rs  mod.rs  proxy.rs  ssh.rs
src/backend/ssh/: connection.rs  legacy.rs  system_probe.rs  x11.rs
src/config/: model.rs  store.rs
src/platform/: x_server.rs
src/session/: config.rs  mod.rs  model.rs  pane.rs
src/sftp/: archive.rs  auth.rs  browse.rs  mod.rs  model.rs  operations.rs  ops.rs  path.rs  preview.rs  session.rs  transfer.rs  worker.rs
src/sftp/worker/: runtime.rs
src/terminal/: backend.rs  cwd.rs  element.rs  highlight.rs  key_encoding.rs  listener.rs  tab.rs  transfer.rs
