[package]
name = "ax_shell"
version = "2026.7.6"
edition = "2024"
authors = ["AxShell contributors"]
description = "A GPUI Component based SSH and local terminal client"
license = "GPL-3.0-or-later"
rust-version = "1.88.0"

[dependencies]
anyhow = "1"
tokio-socks = "0.5"
alacritty_terminal = "0.26.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
flate2 = "1"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "runtime_shaders", "wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "ca85b5588f5feea021f1ee86cb13703dc6f30ec4" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "ca85b5588f5feea021f1ee86cb13703dc6f30ec4" }
menu = { git = "https://github.com/zed-industries/zed" }
portable-pty = "0.9"
rfd = "0.17"
russh = { version = "0.62.2", features = ["des"] }
russh-sftp = "2.3.0"
rust-i18n = "4"
sys-locale = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh-key = "0.6"
sysinfo = "0.33"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
futures = "0.3.32"
notify = "8"
open = "5.1"
time = { version = "0.3.45", features = ["formatting", "local-offset"] }
tracing-appender = "0.2.5"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
sha2 = "0.10"
serialport = "4"

[features]
# Recognized only to silence the legacy conditional used inside `objc` 0.2 macros.
cargo-clippy = []

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-icons = "0.4"
mime_guess = "2"

[package.metadata.deb]
maintainer = "AxShell contributors"
license-file = ["LICENSE"]
extended-description = "A GPUI Component based SSH and local terminal client"
section = "terminal"
priority = "optional"
assets = [
    ["target/release/ax_shell", "usr/bin/", "755"],
    ["assets/ax_shell.desktop", "usr/share/applications/", "644"],
    ["assets/icons/terminal_icon_all_formats/terminal_icon_256.png", "usr/share/icons/hicolor/256x256/apps/ax_shell.png", "644"],
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[build-dependencies]
winres = "0.1.12"
